[metadata]
name = lastfmcollagegenerator
version = 0.4.2
author = Pau Riera
author_email = pau.riera.forteza@gmail.com
description = Create Last.fm collages
long_description = file: README.md
long_description_content_type = text/markdown
keywords = lastfm, music, collage, albumcover, album, artist, musicbucket, musicbucket.net
license = MIT
url = https://github.com/paurieraf/lastfm-collage-generator
project_urls =
    Bug Tracker = https://github.com/paurieraf/lastfm-collage-generator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    requests>=2.28.0
    pylast>=5.0.0
    Pillow>=9.1.1
    beautifulsoup4>=4.11.1
    html5lib>=1.1

[options.packages.find]
where=src

